2013-09-04  Doug Evans  <dje@google.com>

	* gdb.base/enumval.c (ZERO): New enum value.
	(main): Use it
	* gdb.base/enumval.exp: Test ability to print ZERO.

2013-09-03  Muhammad Bilal  <mbilal@codesourcery.com>
            Pedro Alves  <palves@redhat.com>

	* gdb.base/relocate.exp: Check that invalid options are
	rejected.

2013-08-30  Andrew Burgess  <aburgess@broadcom.com>

	* gdb.base/code_elim1.c (my_bss_symbol): New variable added.
	(my_static_symbol): Add comment.
	(main): Reference my_bss_symbol.

2013-08-30  Phil Muldoon  <pmuldoon@redhat.com>

	* gdb.python/py-arch.exp: Tests for invalid architecture.

2013-08-29  Sterling Augustine  <saugustine@google.com>

	* boards/remote-stdio-gdbserver.exp: Set rcp_prog and
	rsh_prog in new conditional.  Move use of REMOTE_PORTNUM into
	said conditional.

2013-08-29  Phil Muldoon  <pmuldoon@redhat.com>

	* gdb.python/py-arch.exp: Load gdb-python.exp.

2013-08-29  Phil Muldoon  <pmuldoon@redhat.com>

	* gdb.python/py-framefilter.py (FrameFilter.filter): Check
	itertools for imap attribute.  Otherwise use map().
	(ElidingIterator): Define wrapper function __next__.
	* gdb.python/py-framefilter-mi.exp: Do not use execfile,
	use exec (open (read ())) instead.
	* gdb.python/py-framefilter.exp: Ditto.
	* gdb.python/py-arch.exp: Update print based test to Python 3.x
	compliance.
	* gdb.python/py-frame.exp: Ditto.
	* gdb.python/py-type.exp: Ditto.

2013-08-28  Jan Kratochvil  <jan.kratochvil@redhat.com>

	PR gdb/15415
	* gdb.base/argv0-symlink.c: New file.
	* gdb.base/argv0-symlink.exp: New file.

2013-08-28  Tom Tromey  <tromey@redhat.com>

	* gdb.dwarf2/gdb-index.exp (add_gdb_index): Use explicit test name
	when saving index.

2013-08-27  Yao Qi  <yao@codesourcery.com>

	* gdb.trace/entry-values.exp: Test unavailable entry value is
	not shown when option '--skip-unavailable' is specified.
	* gdb.trace/mi-trace-unavailable.exp (test_trace_unavailable):
	Add tests for new option '--skip-unavailable'.
