@@ -38,7 +38,7 @@ if { [skip_python_tests] } { continue }
 
 gdb_test_no_output "python exec (open ('${pyfile}').read ())" ""
 
-gdb_test "Test_Events" "Event testers registered."
+gdb_test "test-events" "Event testers registered."
 gdb_test_no_output "set non-stop on"
 gdb_test_no_output "set target-async on"
 
